--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script>
-      // if ("serviceWorker" in navigator) {
-      //   window.addEventListener("load", () => {
-      //     navigator.serviceWorker.register("./serviceworker.js")
-      //     .then(reg => console.log(`Registered Service Worker: ${reg.scope}`)) 
-      //     .catch(err => console.log(`Failed to register Service Worker: ${err}`));
-      //   });
-      // }
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker.register("./serviceworker.js")
+          .then(reg => console.log(`Registered Service Worker: ${reg.scope}`)) 
+          .catch(err => console.log(`Failed to register Service Worker: ${err}`));
+        });
+      }
     </script>
   </body>
 </html>
